[gd_scene load_steps=2 format=3 uid="uid://cx3m8nqkx7hs"]

[ext_resource type="Script" path="res://ShipSelection.gd" id="1_ship"]

[node name="ShipSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ship")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -320.0
offset_right = 250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "SELECT YOUR SHIP"
horizontal_alignment = 1

[node name="ShipContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ShipInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2

[node name="ShipNameLabel" type="Label" parent="ShipInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Vanguard"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="ShipInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 90.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Balanced starter ship"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="ShipInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 150.0
offset_bottom = 280.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Stats:
Speed: 400
Fire Rate: 0.2s
Health: 3"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="ShipInfoPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "SELECT"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 170.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "‚Üê BACK"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "High Score: 0"
horizontal_alignment = 2

[connection signal="pressed" from="ShipInfoPanel/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
